force-app/main/default/objects/SAC_TiempoEstados__c/SAC_TiempoEstados__c.object-meta.xml
<CustomObject>
    <label>Tiempo por estados</label>
    <nameField>
        <displayFormat>TTME-{0000}</displayFormat>
        <label>Nombre de Tiempo por estados</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAC_TiempoEstados</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>