force-app/main/default/objects/SAC_TiempoEstados__c/fields/SAC_Duracion__c.field-meta.xml
<CustomField>
    <fullName>SAC_Duracion__c</fullName>
    <formula>SAC_Fin__c -  SAC_Inicio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duración</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>