force-app/main/default/objects/SAC_TiempoEstados__c/fields/SAC_Estado__c.field-meta.xml
<CustomField>
    <fullName>SAC_Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAC_001</fullName>
                <label>Alta</label>
            </value>
            <value>
                <fullName>SAC_002</fullName>
                <label>Análisis</label>
            </value>
            <value>
                <fullName>SAC_003</fullName>
                <label>Redacción</label>
            </value>
            <value>
                <fullName>SAC_004</fullName>
                <label>Ejecución</label>
            </value>
            <value>
                <fullName>SAC_005</fullName>
                <label>Negociación</label>
            </value>
            <value>
                <fullName>SAC_006</fullName>
                <label>Subsanación</label>
            </value>
            <value>
                <fullName>SAC_007</fullName>
                <label>Inadmisión</label>
            </value>
            <value>
                <fullName>SAC_009</fullName>
                <label>Baja</label>
            </value>
            <value>
                <fullName>SAC_008</fullName>
                <label>Derivación</label>
            </value>
            <value>
                <fullName>Cerrado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>SAC_010</fullName>
                <label>Pte. Asignar</label>
            </value>
            <value>
                <fullName>SAC_011</fullName>
                <label>En gestión</label>
            </value>
            <value>
                <fullName>SAC_012</fullName>
                <label>Gestionada</label>
            </value>
            <value>
                <fullName>SAC_013</fullName>
                <label>Descartada</label>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>SAC_014</fullName>
                <label>Cerrada sin resolver</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>