force-app/main/default/objects/SAC_TiempoEstados__c/fields/SAC_FechaAsignacion__c.field-meta.xml
<CustomField>
    <fullName>SAC_FechaAsignacion__c</fullName>
    <description>Fecha en el momento que la US es asignada a un gestor en el estado de Alta</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Asignación</label>
    <type>DateTime</type>
</CustomField>