force-app/main/default/objects/SAC_TiempoEstados__c/fields/SAC_Fin__c.field-meta.xml
<CustomField>
    <fullName>SAC_Fin__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fin</label>
    <type>DateTime</type>
</CustomField>