force-app/main/default/objects/SAC_TiempoEstados__c/fields/SAC_Grupo__c.field-meta.xml
<CustomField>
    <fullName>SAC_Grupo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Grupo del caso</description>
    <label>Grupo</label>
    <referenceTo>CC_Grupo_Colaborador__c</referenceTo>
    <relationshipLabel>SAC_TiempoEstados</relationshipLabel>
    <relationshipName>SAC_TiempoEstados</relationshipName>
    <type>Lookup</type>
</CustomField>