force-app/main/default/objects/SAC_TiempoEstados__c/fields/SAC_Inicio__c.field-meta.xml
<CustomField>
    <fullName>SAC_Inicio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inicio</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>