force-app/main/default/objects/SAC_TiempoEstados__c/fields/SAC_TMECaso__c.field-meta.xml
<CustomField>
    <fullName>SAC_TMECaso__c</fullName>
    <label>TMO Caso</label>
    <referenceTo>SAC_TMECaso__c</referenceTo>
    <relationshipLabel>Tiempo Estados</relationshipLabel>
    <relationshipName>SAC_TiempoEstados</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>